--- a/data/icons/meson.build
+++ b/data/icons/meson.build
@@ -11,3 +11,15 @@ install_data(
   symbolic_dir / ('@0@-symbolic.svg').format(application_id),
   install_dir: get_option('datadir') / 'icons' / symbolic_dir
 )
+
+action_dir = join_paths('hicolor', 'scalable', 'actions')
+action_icons = [
+    # each icon must be registered here
+    join_paths(action_dir, 'verified-checkmark-symbolic.svg'),
+    join_paths(action_dir, 'playback-symbolic.svg')
+]
+
+install_data(
+  action_icons,
+  install_dir: join_paths(get_option('datadir'), 'icons', action_dir)
+)
