--- a/data/icons/meson.build
+++ b/data/icons/meson.build
@@ -16,7 +16,9 @@ action_dir = join_paths('hicolor', 'scalable', 'actions')
 action_icons = [
     # each icon must be registered here
     join_paths(action_dir, 'verified-checkmark-symbolic.svg'),
-    join_paths(action_dir, 'playback-symbolic.svg')
+    join_paths(action_dir, 'playback-symbolic.svg'),
+    join_paths(action_dir, 'help-website-symbolic.svg'),
+    join_paths(action_dir, 'document-edit-symbolic.svg')
 ]
 
 install_data(
