--- a/package.json
+++ b/package.json
@@ -1,7 +1,11 @@
 {
-  "dependencies": {},
+  "name": "ml4w-dotfilesinstaller-wiki",
+  "type": "module",
+  "dependencies": {
+    "bun": "^1.2.18",
+    "devicon": "^2.16.0"
+  },
   "devDependencies": {
-    "devicon": "^2.16.0",
     "vitepress": "^1.6.3"
   },
   "scripts": {
