--- a/data/com.ml4w.dotfilesinstaller.metainfo.xml.in
+++ b/data/com.ml4w.dotfilesinstaller.metainfo.xml.in
@@ -4,35 +4,28 @@
   <metadata_license>CC0-1.0</metadata_license>
   <project_license>GPL-3.0-or-later</project_license>
 
-  <name>Dotfiles-installer</name>
-  <summary>Keep the summary shorter, between 10 and 35 characters</summary>
+  <name>Dotfiles Installer</name>
+  <summary>Install Dotfiles easily, fast and secure.</summary>
   <description>
-    <p>No description</p>
+    <p>Install dotfiles easily, quickly and securely. Or publish your own dotfiles and offer an intuitive installation application.</p>
   </description>
 
   <developer id="tld.vendor">
-    <name>Developer name</name>
+    <name>Stephan Raabe (ML4W)</name>
   </developer>
 
   <!-- Required: Should be a link to the upstream homepage for the component -->
-  <url type="homepage">https://example.org/</url>
+  <url type="homepage">https://mylinuxforwork.github.io/dotfiles-installer/</url>
   <!-- Recommended: It is highly recommended for open-source projects to display the source code repository -->
-  <url type="vcs-browser">https://example.org/repository</url>
+  <url type="vcs-browser">https://github.com/mylinuxforwork/dotfiles-installer</url>
   <!-- Should point to the software's bug tracking system, for users to report new bugs -->
-  <url type="bugtracker">https://example.org/issues</url>
+  <url type="bugtracker">https://github.com/mylinuxforwork/dotfiles-installer/issues</url>
   <!-- Should link a FAQ page for this software, to answer some of the most-asked questions in detail -->
   <!-- URLs of this type should point to a webpage where users can submit or modify translations of the upstream project -->
-  <url type="translate">https://example.org/translate</url>
-  <url type="faq">https://example.org/faq</url>
+  <url type="faq">https://mylinuxforwork.github.io/dotfiles-installer/</url>
   <!-- Should provide a web link to an online user's reference, a software manual or help page -->
-  <url type="help">https://example.org/help</url>
-  <!-- URLs of this type should point to a webpage showing information on how to donate to the described software project -->
-  <url type="donation">https://example.org/donate</url>
-  <!-- This could for example be an HTTPS URL to an online form or a page describing how to contact the developer -->
-  <url type="contact">https://example.org/contact</url>
-  <!-- URLs of this type should point to a webpage showing information on how to contribute to the described software project -->
-  <url type="contribute">https://example.org/contribute</url>
-
+  <url type="help">https://mylinuxforwork.github.io/dotfiles-installer/</url>
+  
   <translation type="gettext">dotfiles-installer</translation>
   <!-- All graphical applications having a desktop file must have this tag in the MetaInfo.
      If this is present, appstreamcli compose will pull icons, keywords and categories from the desktop file. -->
@@ -48,23 +41,26 @@
 
   <screenshots>
     <screenshot type="default">
-      <image>https://example.org/example1.png</image>
-      <caption>A caption</caption>
+      <image>https://mylinuxforwork.github.io/dotfiles-installer/mainscreen.jpg</image>
+      <caption>Welcome Screen</caption>
     </screenshot>
     <screenshot>
-      <image>https://example.org/example2.png</image>
-      <caption>A caption</caption>
+      <image>https://mylinuxforwork.github.io/dotfiles-installer/backupscreen.jpg</image>
+      <caption>Backup Screen</caption>
+    </screenshot>
+    <screenshot>
+      <image>https://mylinuxforwork.github.io/dotfiles-installer/mainscreen-dev.jpg</image>
+      <caption>Development Workflow Support</caption>
     </screenshot>
   </screenshots>
 
   <releases>
-    <release version="1.0.1" date="2024-01-18">
-      <url type="details">https://example.org/changelog.html#version_1.0.1</url>
+    <release version="0.8.5" date="2025-07-08">
+      <url type="details">https://mylinuxforwork.github.io/dotfiles-installer/changelog</url>
       <description translate="no">
-        <p>Release description</p>
+        <p>Release 0.8.5</p>
         <ul>
-          <li>List of changes</li>
-          <li>List of changes</li>
+          <li>Include git dependency</li>
         </ul>
       </description>
     </release>
