--- a/data/com.ml4w.dotfilesinstaller.metainfo.xml.in
+++ b/data/com.ml4w.dotfilesinstaller.metainfo.xml.in
@@ -58,6 +58,15 @@
   </screenshots>
 
   <releases>
+    <release version="0.8.9" date="2025-07-16">
+      <url type="details">https://mylinuxforwork.github.io/dotfiles-installer/changelog</url>
+      <description translate="no">
+        <p>Release 0.8.9</p>
+        <ul>
+          <li>Add git tag support for remote .dotinst files</li>
+        </ul>
+      </description>
+    </release>
     <release version="0.8.8" date="2025-07-15">
       <url type="details">https://mylinuxforwork.github.io/dotfiles-installer/changelog</url>
       <description translate="no">
