--- a/data/com.ml4w.dotfilesinstaller.metainfo.xml.in
+++ b/data/com.ml4w.dotfilesinstaller.metainfo.xml.in
@@ -58,12 +58,13 @@
   </screenshots>
 
   <releases>
-    <release version="0.9" date="2025-07-18">
+    <release version="0.9.1" date="2025-07-18">
       <url type="details">https://mylinuxforwork.github.io/dotfiles-installer/changelog</url>
       <description translate="no">
-        <p>Release 0.9</p>
+        <p>Release 0.9.1</p>
         <ul>
           <li>Access to all installation folders after got clone</li>
+          <li>Add migration feature to install dotfiles directly</li>
           <li>Add icons to backup, restore and protect screen</li>
           <li>Add select/unselect all toggle to backup, restore and protect screen</li>
         </ul>
