--- a/data/com.ml4w.dotfilesinstaller.metainfo.xml.in
+++ b/data/com.ml4w.dotfilesinstaller.metainfo.xml.in
@@ -58,6 +58,15 @@
   </screenshots>
 
   <releases>
+    <release version="0.9.3" date="2025-07-23">
+      <url type="details">https://mylinuxforwork.github.io/dotfiles-installer/changelog</url>
+      <description translate="no">
+        <p>Release 0.9.3</p>
+        <ul>
+          <li>Write optional log file for debug purposes</li>
+        </ul>
+      </description>
+    </release>
     <release version="0.9.2" date="2025-07-23">
       <url type="details">https://mylinuxforwork.github.io/dotfiles-installer/changelog</url>
       <description translate="no">
