--- a/data/com.ml4w.dotfilesinstaller.metainfo.xml.in
+++ b/data/com.ml4w.dotfilesinstaller.metainfo.xml.in
@@ -5,9 +5,9 @@
   <project_license>GPL-3.0-or-later</project_license>
 
   <name>Dotfiles Installer</name>
-  <summary>Install dotfiles fast and secure</summary>
+  <summary>Manage dotfiles fast and secure</summary>
   <description>
-    <p>Take control of your dotfiles configurations with Dotfiles Installer, designed to make dotfile management seamless. You can install dotfiles easily, quickly, and securely with an intuitive installation wizard that guides you through every step. The app prioritizes your data safety, offering robust backup functionality and protection for your existing customizations during the installation process.</p>
+    <p>Take control of your dotfiles for different desktop configurations with Dotfiles Installer, designed to make dotfile management seamless. You can install dotfiles easily, quickly, and securely with an intuitive installation wizard that guides you through every step. The app prioritizes your data safety, offering robust backup functionality and protection for your existing customizations during the installation process.</p>
     <p>Furthermore, the app allows you to publish your own dotfiles and offer others a straightforward, intuitive way to install your preferred setup.</p>
   </description>
 
@@ -58,62 +58,12 @@
   </screenshots>
 
   <releases>
-    <release version="0.9.3" date="2025-07-23">
+    <release version="0.9.4" date="2025-07-24">
       <url type="details">https://mylinuxforwork.github.io/dotfiles-installer/changelog</url>
       <description translate="no">
-        <p>Release 0.9.3</p>
-        <ul>
-          <li>Write optional log file for debug purposes</li>
-        </ul>
-      </description>
-    </release>
-    <release version="0.9.2" date="2025-07-23">
-      <url type="details">https://mylinuxforwork.github.io/dotfiles-installer/changelog</url>
-      <description translate="no">
-        <p>Release 0.9.2</p>
+        <p>Release 0.9.4</p>
         <ul>
           <li>Fixes for backup feature</li>
-        </ul>
-      </description>
-    </release>
-    <release version="0.9.1" date="2025-07-18">
-      <url type="details">https://mylinuxforwork.github.io/dotfiles-installer/changelog</url>
-      <description translate="no">
-        <p>Release 0.9.1</p>
-        <ul>
-          <li>Access to all installation folders after got clone</li>
-          <li>Add migration feature to install dotfiles directly</li>
-          <li>Add icons to backup, restore and protect screen</li>
-          <li>Add select/unselect all toggle to backup, restore and protect screen</li>
-        </ul>
-      </description>
-    </release>
-    <release version="0.8.9" date="2025-07-16">
-      <url type="details">https://mylinuxforwork.github.io/dotfiles-installer/changelog</url>
-      <description translate="no">
-        <p>Release 0.8.9</p>
-        <ul>
-          <li>Add git tag support for remote .dotinst files</li>
-        </ul>
-      </description>
-    </release>
-    <release version="0.8.8" date="2025-07-15">
-      <url type="details">https://mylinuxforwork.github.io/dotfiles-installer/changelog</url>
-      <description translate="no">
-        <p>Release 0.8.8</p>
-        <ul>
-          <li>Update of development workflow</li>
-          <li>Minor buffixes</li>
-          <li>Update of Flathub meta information</li>
-        </ul>
-      </description>
-    </release>
-    <release version="0.8.7" date="2025-07-12">
-      <url type="details">https://mylinuxforwork.github.io/dotfiles-installer/changelog</url>
-      <description translate="no">
-        <p>Release 0.8.7</p>
-        <ul>
-          <li>git dependency included</li>
         </ul>
       </description>
     </release>
