Add info button with features

--- a/data/com.ml4w.dotfilesinstaller.metainfo.xml.in
+++ b/data/com.ml4w.dotfilesinstaller.metainfo.xml.in
@@ -58,12 +58,12 @@
   </screenshots>
 
   <releases>
-    <release version="0.9.5" date="2025-07-24">
+    <release version="0.9.6" date="2025-08-07">
       <url type="details">https://mylinuxforwork.github.io/dotfiles-installer/changelog</url>
       <description translate="no">
-        <p>Release 0.9.5</p>
+        <p>Release 0.9.6</p>
         <ul>
-          <li>Configuration updates</li>
+          <li>Add "Info" menu button to load configuration overview to installed dotfiles with "Open Homepage" and "Check for Updates" if remote source.</li>
         </ul>
       </description>
     </release>
