--- a/data/com.ml4w.dotfilesinstaller.metainfo.xml.in
+++ b/data/com.ml4w.dotfilesinstaller.metainfo.xml.in
@@ -63,6 +63,7 @@
       <description translate="no">
         <p>Release 0.9.8</p>
         <ul>
+          <li>Add more developer tools</li>
           <li>Add "Info" menu button to load configuration overview to installed dotfiles with "Open Homepage" and "Check for Updates" if remote source.</li>
         </ul>
       </description>
