--- a/data/com.ml4w.dotfilesinstaller.metainfo.xml.in
+++ b/data/com.ml4w.dotfilesinstaller.metainfo.xml.in
@@ -58,14 +58,12 @@
   </screenshots>
 
   <releases>
-    <release version="0.11.0" date="2025-11-07">
+    <release version="0.12.0" date="2026-02-01">
       <url type="details">https://mylinuxforwork.github.io/dotfiles-installer/changelog</url>
       <description translate="no">
-        <p>Release 0.11.0</p>
+        <p>Release 0.12.0</p>
         <ul>
-          <li>Check before cloning if remote repository exists</li>
-          <li>Add rsync to sync from Project folder to dotfiles folder</li>
-          <li>Fix activate dotfiles</li>
+          <li>Symlinks will be created with relative paths to enable portability</li>
         </ul>
       </description>
     </release>
